--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,13 @@
         "php": ">=7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~3.7",
-        "mockery/mockery": "~0.8"
+        "phpunit/phpunit": ">=3.7",
+        "mockery/mockery": ">=0.9"
     },
     "autoload": {
         "psr-4": { "Akamon\\MockeryCallableMock\\": "src/" }
+    },
+    "scripts": {
+        "test": "phpunit"
     }
 }
